gcc/testsuite/rust/rustc/ui/type-alias-impl-trait/declared_but_not_defined_in_scope.rs
#![feature(type_alias_impl_trait)]

fn main() {}

mod boo {
    // declared in module but not defined inside of it
    pub type Boo = impl ::std::fmt::Debug; // { dg-error "" "" { target *-*-* } }
}

fn bomp() -> boo::Boo {
    ""
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

